--- a/ShoppyHomeClient/ShoppyHomeClient.csproj
+++ b/ShoppyHomeClient/ShoppyHomeClient.csproj
@@ -37,6 +37,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,11 +50,109 @@
   <ItemGroup>
     <Compile Include="Broker\FiltroRichieste.cs" />
     <Compile Include="Broker\Richiesta.cs" />
+    <Compile Include="Models\Broker\GestoreSessione.cs" />
+    <Compile Include="Models\Broker\Richiesta.cs" />
+    <Compile Include="Models\Broker\Sessione.cs" />
+    <Compile Include="Models\Broker\SessioniAttive.cs" />
+    <Compile Include="Models\Model\Log\Entry.cs" />
+    <Compile Include="Models\Model\Log\EntryMessaggio.cs" />
+    <Compile Include="Models\Model\Log\EntryOperazione.cs" />
+    <Compile Include="Models\Model\Log\Log.cs" />
+    <Compile Include="Models\Model\Profilo\DomandaSicurezza.cs" />
+    <Compile Include="Models\Model\Profilo\Indirizzo.cs" />
+    <Compile Include="Models\Model\Profilo\Ordine.cs" />
+    <Compile Include="Models\Model\Profilo\Spesa.cs" />
+    <Compile Include="Models\Model\Profilo\Storico.cs" />
+    <Compile Include="Models\Model\Profilo\Utente.cs" />
+    <Compile Include="Models\Model\Spesa\Carrello.cs" />
+    <Compile Include="Models\Model\Spesa\Catalogo.cs" />
+    <Compile Include="Models\Model\Spesa\CatenaMarket.cs" />
+    <Compile Include="Models\Model\Spesa\ElementoCatalogo.cs" />
+    <Compile Include="Models\Model\Spesa\Prodotto.cs" />
+    <Compile Include="Models\Model\Spesa\Supermarket.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Carrello.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Carrello.Designer.cs">
+      <DependentUpon>Carrello.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Anomalie.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Anomalie.Designer.cs">
+      <DependentUpon>Anomalie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Catalogo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Catalogo.Designer.cs">
+      <DependentUpon>Catalogo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GestioneLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\GestioneLog.Designer.cs">
+      <DependentUpon>GestioneLog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\HomeSpesa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\HomeSpesa.Designer.cs">
+      <DependentUpon>HomeSpesa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Log.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Log.Designer.cs">
+      <DependentUpon>Log.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Profilo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Profilo.Designer.cs">
+      <DependentUpon>Profilo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RecuperoPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\RecuperoPassword.Designer.cs">
+      <DependentUpon>RecuperoPassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RegistrazioneApp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\RegistrazioneApp.Designer.cs">
+      <DependentUpon>RegistrazioneApp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SelezioneMarket.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SelezioneMarket.Designer.cs">
+      <DependentUpon>SelezioneMarket.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Verifica-Conferma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Verifica-Conferma.Designer.cs">
+      <DependentUpon>Verifica-Conferma.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\VisualStorici.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\VisualStorici.Designer.cs">
+      <DependentUpon>VisualStorici.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -64,6 +165,47 @@
     <Folder Include="bin\Debug\" />
     <Folder Include="bin\Release\" />
     <Folder Include="obj\Debug\TempPE\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Anomalie.resx">
+      <DependentUpon>Anomalie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Carrello.resx">
+      <DependentUpon>Carrello.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Catalogo.resx">
+      <DependentUpon>Catalogo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\GestioneLog.resx">
+      <DependentUpon>GestioneLog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\HomeSpesa.resx">
+      <DependentUpon>HomeSpesa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Log.resx">
+      <DependentUpon>Log.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Profilo.resx">
+      <DependentUpon>Profilo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\RecuperoPassword.resx">
+      <DependentUpon>RecuperoPassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\RegistrazioneApp.resx">
+      <DependentUpon>RegistrazioneApp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SelezioneMarket.resx">
+      <DependentUpon>SelezioneMarket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Verifica-Conferma.resx">
+      <DependentUpon>Verifica-Conferma.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\VisualStorici.resx">
+      <DependentUpon>VisualStorici.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
